--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "it_kamasutra",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lossen.github.io/it-kamasutra-social",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
@@ -22,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
