--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.24",
+    "@types/redux-form": "^8.3.5",
     "@typescript-eslint/parser": "^5.22.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
