--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
