--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux-form": "^8.3.5",
     "@typescript-eslint/parser": "^5.22.0",
+    "antd": "^4.20.7",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
